# Craft

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.superpowers/brainstorm/74591-1784238725/: .server-stopped
adr/: 0001-crate-structure.md  0002-node-model.md  0003-behavior-runtime.md  0004-render-trait.md  0005-schema-pipeline.md  0006-replay-system.md  0008-error-handling.md  0010-testing-strategy.md  0012-system-registry.md  0013-input-model.md  0016-lua-scripting.md  0017-editor-architecture.md  0019-agent-copilot.md  0021-editor-ux.md
benchmarks/: 01_on_tick_increment.json  02_on_signal_handler.json  03_state_machine.json  04_if_destroy.json
crates/craft-audio/: Cargo.toml
crates/craft-audio/src/: lib.rs
crates/craft-bridge/: Cargo.toml
crates/craft-bridge/src/: lib.rs
crates/craft-bridge/tests/: m6_integration.rs  m7_integration.rs
crates/craft-editor/: Cargo.toml  README.md
crates/craft-editor/src/: app.rs  engine.rs  error.rs  json_path.rs  lib.rs  lua_lsp.rs  lua_stub_gen.rs  main.rs  menu.rs  persist.rs  render_helpers.rs  renderer.rs  state.rs  theme.rs  undo.rs  watcher.rs
crates/craft-editor/src/agent/: client.rs  config.rs  context.rs  mod.rs  tools.rs  types.rs
crates/craft-editor/src/io/: mod.rs  project.rs  recent.rs  scene_def.rs
crates/craft-editor/src/lsp/: mod.rs
crates/craft-editor/src/panels/: agent_panel.rs  behavior_editor.rs  file_browser.rs  inspector.rs  lua_editor.rs  mod.rs  scene_tree.rs  terminal_preview.rs
crates/craft-editor/tests/: e1_engine_lifecycle.rs  e1_io_integration.rs  e1_panels_kittest.rs  e1_persistence_integration.rs  e1_state_integration.rs  e1_watcher_integration.rs  e2_json_path.rs  e2_lua_editor.rs  e2_panels_kittest.rs  e3_agent_flow.rs  e3_panels_kittest.rs  e4_panels_kittest.rs  e4_undo.rs
crates/craft-eval/: Cargo.toml
crates/craft-eval/src/: lib.rs
crates/craft-eval/tests/: m10_integration.rs
crates/craft-gpu/: Cargo.toml
crates/craft-gpu/src/: lib.rs  main.rs  shaders.rs  texture.rs
crates/craft-kernel/: Cargo.toml
crates/craft-kernel/src/: behavior.rs  engine.rs  error.rs  evaluator.rs  hook.rs  hot_reload.rs  lib.rs  lint.rs  project.rs  render.rs  resource.rs  scene.rs  signal.rs  system.rs
crates/craft-kernel/tests/: m1_integration.rs  m2_integration.rs  m3_integration.rs  m5_integration.rs
crates/craft-lua/: Cargo.toml
crates/craft-lua/src/: bindings.rs  class.rs  determinism.rs  host.rs  lib.rs  modules.rs  query.rs  runtime.rs
crates/craft-lua/tests/: l1_integration.rs  l2_integration.rs  l3_integration.rs
crates/craft-macros/: Cargo.toml
crates/craft-macros/src/: lib.rs
crates/craft-particles/: Cargo.toml
crates/craft-particles/src/: lib.rs
crates/craft-physics/: Cargo.toml
crates/craft-physics/src/: lib.rs
crates/craft-replay/: Cargo.toml
crates/craft-replay/src/: lib.rs
crates/craft-replay/tests/: l3_recorder_integration.rs  m4_integration.rs
crates/craft-schema/: Cargo.toml
crates/craft-schema/src/: lib.rs  lua_engine_stub.lua
crates/craft-terminal/: Cargo.toml
crates/craft-terminal/src/: lib.rs
crates/craft-terminal/tests/: m8_integration.rs
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  SCHEMA.md
docs/adr/: 0001-crate-structure.md  0002-node-model.md  0003-behavior-runtime.md  0004-render-trait.md  0005-schema-pipeline.md  0006-replay-system.md  0007-bridge-layer.md  0008-error-handling.md  0009-hot-reload-and-resources.md  0011-expression-vocabulary.md  0014-ai-native-primitives.md  0015-performance-budgets.md  0016-lua-scripting.md  0017-editor-architecture.md  0018-editor-panels.md  0019-agent-copilot.md  0020-lua-script-editor.md  0021-editor-ux.md
docs/superpowers/plans/: 2025-07-17-v3-gpu-rendering.md  2026-07-16-editor-e1.md  2026-07-17-editor-e2.md  2026-07-18-editor-e3.md  2026-07-18-editor-e4.md
docs/superpowers/specs/: 2025-07-17-v3-gpu-rendering-design.md  2026-07-09-craft-prd.md  2026-07-16-editor-e1-design.md  2026-07-17-editor-e2-design.md  2026-07-18-editor-e3-design.md  2026-07-18-editor-e4-design.md
games/dungeon_crawler/: Cargo.toml  craft.toml  scene.json
games/dungeon_crawler/scripts/: enemy.lua
games/dungeon_crawler/src/: lib.rs
games/dungeon_crawler/tests/: integration.rs
games/tower_defense/: Cargo.toml  craft.toml  scene.json
games/tower_defense/assets/: README.md
games/tower_defense/src/: lib.rs
games/tower_defense/tests/: integration.rs
scripts/: coverage.sh
sdk/src/: generated.ts
