[package]
name = "craft-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
craft-kernel = { path = "../craft-kernel" }
craft-schema = { path = "../craft-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
