[package]
name = "craft-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "craft_editor"
path = "src/lib.rs"

[[bin]]
name = "craft-editor"
path = "src/main.rs"

[dependencies]
craft-kernel = { path = "../craft-kernel" }
craft-schema = { path = "../craft-schema" }
craft-lua = { path = "../craft-lua" }
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_dock = "0.16"
rfd = "0.15"
notify = "7"
which = "7"
serde = { workspace = true }
serde_json = { workspace = true }
directories = "5"
tracing = "0.1"
thiserror = { workspace = true }
toml = { workspace = true }
bincode = "1"

[dev-dependencies]
egui_kittest = "0.31"
egui-winit = { version = "0.31", features = ["accesskit"] }
tempfile = "3"
temp_env = { package = "temp-env", version = "0.3" }
tower_defense = { path = "../../games/tower_defense" }