[package]
name = "craft-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
craft-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
inventory = { workspace = true }
notify = { workspace = true }
bitflags = "2"

[dev-dependencies]
pretty_assertions = "1"