[package]
name = "craft-lua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
craft-kernel = { path = "../craft-kernel" }
mlua = { version = "0.12", features = ["lua54"] }
serde_json = "1"

[dev-dependencies]