[package]
name = "craft-lua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
craft-kernel = { path = "../craft-kernel" }
mlua = { version = "0.12", features = ["lua54"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
