[package]
name = "craft-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
craft-kernel = { path = "../craft-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["preserve_order"] }
