[package]
name = "dungeon_crawler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
craft-kernel = { path = "../../crates/craft-kernel" }
craft-macros = { path = "../../crates/craft-macros" }
craft-physics = { path = "../../crates/craft-physics" }
craft-particles = { path = "../../crates/craft-particles" }
craft-audio = { path = "../../crates/craft-audio" }
serde_json = { workspace = true }

[dev-dependencies]
